Made the Code More User-Friendly
Added Welcoming Texts & Changed the Grammar & Documentation

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
 These are just some R scripts that I've found useful for school or just saw them online as snippets and wanted to see how they work.
+
+I have put them on my github for you guys to refer to if you get stuck in R programming related issues.
+
+Feel free to fork and add things of your own and if i find them useful i might merge them as well:)
+
+LOVE YOU!
+(MY IMAGINARY GIRLFRIEND;)
